Scale text better and fix margins for the text in slides since it was off center

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,6 @@ nav span {
 }
 
 header {
-	/*padding: 0 20px 10px;*/
 	margin: 0;
 	padding: 0;
 	height: 100vh;
@@ -250,6 +249,10 @@ section p {
 }
 
 #nextrepo, #prevrepo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	position: absolute;
 	top: 50%;
 	width: 3rem;
@@ -257,7 +260,7 @@ section p {
 	transform: translateY(-50%);
 	background-color: #FFFFFF6B;
 	z-index: 15;
-	border-radius: .1rem;
+	border-radius: 50%;
 	transition: background-color .7s;
 }
 
@@ -267,8 +270,8 @@ section p {
 }
 
 #nextrepo img, #prevrepo img {
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 90%;
+	max-height: 90%;
 }
 
 #prevrepo img {
@@ -320,7 +323,7 @@ section p {
 	background-color: #FFFFFF6B;
 	width: 100%;
 	height: 100%;
-	margin: 0 2%;
+	margin: 0 0 0 2%;
 	padding: 2%;
 	border-radius: 2px;
 	font-size: 4vmax;
@@ -407,5 +410,10 @@ footer a:hover {
 
 	.repo a img {
 		width: 100%;
+	}
+
+	.repo p {
+		margin: 0 2%;
+		font-size: 3vmax;
 	}
 }
